libs/preprocessor/tests/errors/pe15_if_invalid_operator/source.hpp
#define A 1
#if A === 1
data = "A is 1";
#endif
